v2.4/_sources/group_dnnl_api_layer_normalization.rst.txt
.. index:: pair: group; Layer Normalization
.. _doxid-group__dnnl__api__layer__normalization:

Layer Normalization
===================

.. toctree::
	:hidden:

	struct_dnnl_layer_normalization_desc_t.rst
	struct_dnnl_layer_normalization_backward.rst
	struct_dnnl_layer_normalization_forward.rst

Overview
~~~~~~~~

A primitive to perform layer normalization. :ref:`More...<details-group__dnnl__api__layer__normalization>`


.. ref-code-block:: cpp
	:class: doxyrest-overview-code-block

	
	// structs

	struct :ref:`dnnl_layer_normalization_desc_t<doxid-structdnnl__layer__normalization__desc__t>`;
	struct :ref:`dnnl::layer_normalization_backward<doxid-structdnnl_1_1layer__normalization__backward>`;
	struct :ref:`dnnl::layer_normalization_forward<doxid-structdnnl_1_1layer__normalization__forward>`;

	// global functions

	:ref:`dnnl_status_t<doxid-group__dnnl__api__utils_1gad24f9ded06e34d3ee71e7fc4b408d57a>` DNNL_API :ref:`dnnl_layer_normalization_forward_desc_init<doxid-group__dnnl__api__layer__normalization_1gafc38935e49742897454f5009ea9a10f1>`(
		:ref:`dnnl_layer_normalization_desc_t<doxid-structdnnl__layer__normalization__desc__t>`* lnrm_desc,
		:ref:`dnnl_prop_kind_t<doxid-group__dnnl__api__primitives__common_1gae3c1f22ae55645782923fbfd8b07d0c4>` prop_kind,
		const :ref:`dnnl_memory_desc_t<doxid-structdnnl__memory__desc__t>`* data_desc,
		const :ref:`dnnl_memory_desc_t<doxid-structdnnl__memory__desc__t>`* stat_desc,
		float epsilon,
		unsigned flags
		);

	:ref:`dnnl_status_t<doxid-group__dnnl__api__utils_1gad24f9ded06e34d3ee71e7fc4b408d57a>` DNNL_API :ref:`dnnl_layer_normalization_backward_desc_init<doxid-group__dnnl__api__layer__normalization_1gaca22d67e529c86a61fbfa1571d19ca4f>`(
		:ref:`dnnl_layer_normalization_desc_t<doxid-structdnnl__layer__normalization__desc__t>`* lnrm_desc,
		:ref:`dnnl_prop_kind_t<doxid-group__dnnl__api__primitives__common_1gae3c1f22ae55645782923fbfd8b07d0c4>` prop_kind,
		const :ref:`dnnl_memory_desc_t<doxid-structdnnl__memory__desc__t>`* diff_data_desc,
		const :ref:`dnnl_memory_desc_t<doxid-structdnnl__memory__desc__t>`* data_desc,
		const :ref:`dnnl_memory_desc_t<doxid-structdnnl__memory__desc__t>`* stat_desc,
		float epsilon,
		unsigned flags
		);

.. _details-group__dnnl__api__layer__normalization:

Detailed Documentation
~~~~~~~~~~~~~~~~~~~~~~

A primitive to perform layer normalization.

Normalization is performed within the last logical dimension of data tensor.

Both forward and backward propagation primitives support in-place operation; that is, src and dst can refer to the same memory for forward propagation, and diff_dst and diff_src can refer to the same memory for backward propagation.

The layer normalization primitives computations can be controlled by specifying different :ref:`dnnl::normalization_flags <doxid-group__dnnl__api__primitives__common_1gad8ef0fcbb7b10cae3d67dd46892002be>` values. For example, layer normalization forward propagation can be configured to either compute the mean and variance or take them as arguments. It can either perform scaling and shifting using gamma and beta parameters or not. Optionally, it can also perform a fused ReLU, which in case of training would also require a workspace.



.. rubric:: See also:

:ref:`Layer Normalization <doxid-dev_guide_layer_normalization>` in developer guide

Global Functions
----------------

.. index:: pair: function; dnnl_layer_normalization_forward_desc_init
.. _doxid-group__dnnl__api__layer__normalization_1gafc38935e49742897454f5009ea9a10f1:

.. ref-code-block:: cpp
	:class: doxyrest-title-code-block

	:ref:`dnnl_status_t<doxid-group__dnnl__api__utils_1gad24f9ded06e34d3ee71e7fc4b408d57a>` DNNL_API dnnl_layer_normalization_forward_desc_init(
		:ref:`dnnl_layer_normalization_desc_t<doxid-structdnnl__layer__normalization__desc__t>`* lnrm_desc,
		:ref:`dnnl_prop_kind_t<doxid-group__dnnl__api__primitives__common_1gae3c1f22ae55645782923fbfd8b07d0c4>` prop_kind,
		const :ref:`dnnl_memory_desc_t<doxid-structdnnl__memory__desc__t>`* data_desc,
		const :ref:`dnnl_memory_desc_t<doxid-structdnnl__memory__desc__t>`* stat_desc,
		float epsilon,
		unsigned flags
		)

Initializes a descriptor for layer normalization forward propagation primitive.

.. note:: 

   In-place operation is supported: the dst can refer to the same memory as the src.



.. rubric:: Parameters:

.. list-table::
	:widths: 20 80

	*
		- lnrm_desc

		- Output descriptor for layer normalization primitive.

	*
		- prop_kind

		- Propagation kind. Possible values are :ref:`dnnl_forward_training <doxid-group__dnnl__api__primitives__common_1ggae3c1f22ae55645782923fbfd8b07d0c4a992e03bebfe623ac876b3636333bbce0>` and :ref:`dnnl_forward_inference <doxid-group__dnnl__api__primitives__common_1ggae3c1f22ae55645782923fbfd8b07d0c4a2f77a568a675dec649eb0450c997856d>`.

	*
		- data_desc

		- Source and destination memory descriptor.

	*
		- stat_desc

		- Memory descriptor for mean and variance. If this parameter is NULL, a zero memory descriptor, or a memory descriptor with format_kind set to :ref:`dnnl_format_kind_undef <doxid-group__dnnl__api__memory_1ggaa75cad747fa467d9dc527d943ba3367dac86d377bba856ea7aa9679ecf65c8364>`, then the memory descriptor for stats is derived from ``data_desc`` by removing the last dimension.

	*
		- epsilon

		- Layer normalization epsilon parameter.

	*
		- flags

		- Layer normalization flags (:ref:`dnnl_normalization_flags_t <doxid-group__dnnl__api__primitives__common_1ga301f673522a400c7c1e75f518431c9a3>`).



.. rubric:: Returns:

:ref:`dnnl_success <doxid-group__dnnl__api__utils_1ggad24f9ded06e34d3ee71e7fc4b408d57aaa31395e9dccc103cf166cf7b38fc5b9c>` on success and a status describing the error otherwise.

.. index:: pair: function; dnnl_layer_normalization_backward_desc_init
.. _doxid-group__dnnl__api__layer__normalization_1gaca22d67e529c86a61fbfa1571d19ca4f:

.. ref-code-block:: cpp
	:class: doxyrest-title-code-block

	:ref:`dnnl_status_t<doxid-group__dnnl__api__utils_1gad24f9ded06e34d3ee71e7fc4b408d57a>` DNNL_API dnnl_layer_normalization_backward_desc_init(
		:ref:`dnnl_layer_normalization_desc_t<doxid-structdnnl__layer__normalization__desc__t>`* lnrm_desc,
		:ref:`dnnl_prop_kind_t<doxid-group__dnnl__api__primitives__common_1gae3c1f22ae55645782923fbfd8b07d0c4>` prop_kind,
		const :ref:`dnnl_memory_desc_t<doxid-structdnnl__memory__desc__t>`* diff_data_desc,
		const :ref:`dnnl_memory_desc_t<doxid-structdnnl__memory__desc__t>`* data_desc,
		const :ref:`dnnl_memory_desc_t<doxid-structdnnl__memory__desc__t>`* stat_desc,
		float epsilon,
		unsigned flags
		)

Initializes a descriptor for a layer normalization backward propagation primitive.

.. note:: 

   In-place operation is supported: the diff_dst can refer to the same memory as the diff_src.



.. rubric:: Parameters:

.. list-table::
	:widths: 20 80

	*
		- lnrm_desc

		- Output descriptor for layer normalization primitive.

	*
		- prop_kind

		- Propagation kind. Possible values are :ref:`dnnl_backward_data <doxid-group__dnnl__api__primitives__common_1ggae3c1f22ae55645782923fbfd8b07d0c4a524dd6cb2ed9680bbd170ba15261d218>` and :ref:`dnnl_backward <doxid-group__dnnl__api__primitives__common_1ggae3c1f22ae55645782923fbfd8b07d0c4a326a5e31769302972e7bded555e1cc10>` (diffs for all parameters are computed in this case).

	*
		- diff_data_desc

		- Diff source and diff destination memory descriptor.

	*
		- data_desc

		- Source memory descriptor.

	*
		- stat_desc

		- Memory descriptor for mean and variance. If this parameter is NULL, a zero memory descriptor, or a memory descriptor with format_kind set to :ref:`dnnl_format_kind_undef <doxid-group__dnnl__api__memory_1ggaa75cad747fa467d9dc527d943ba3367dac86d377bba856ea7aa9679ecf65c8364>`, then the memory descriptor for stats is derived from ``data_desc`` by removing the last dimension.

	*
		- epsilon

		- Layer normalization epsilon parameter.

	*
		- flags

		- Layer normalization flags (:ref:`dnnl_normalization_flags_t <doxid-group__dnnl__api__primitives__common_1ga301f673522a400c7c1e75f518431c9a3>`).



.. rubric:: Returns:

:ref:`dnnl_success <doxid-group__dnnl__api__utils_1ggad24f9ded06e34d3ee71e7fc4b408d57aaa31395e9dccc103cf166cf7b38fc5b9c>` on success and a status describing the error otherwise.

